ajout de methode, changerCarte, augmenterScore...

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -27,6 +27,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/boutonJeuStart" />
         </TableRow>
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/buttonDifficulte"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bouttonDificulteF" />
+        </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
