--- a/app/src/main/res/menu/resource_menu.xml
+++ b/app/src/main/res/menu/resource_menu.xml
@@ -1,5 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MenuActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/help"
+        android:title="@string/btnMenuHelp"
+        android:icon="@drawable/ic_help"/>
+
+    <item android:id="@+id/APropos"
+        android:title="@string/btnMenuAPropos"
+        android:icon="@drawable/ic_about"/>
 </menu>
