modification des messages de gameOver, corection bug music.

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -49,6 +49,17 @@
                 android:layout_height="wrap_content"
                 android:text="@string/bouttonDifficulteF" />
         </TableRow>
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center" >
+
+            <Button
+                android:id="@+id/buttonVibration"
+                android:layout_width="400px"
+                android:layout_height="wrap_content"
+                android:text="@string/bouttonVibreOff" />
+        </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
